[gd_scene load_steps=12 format=4 uid="uid://sg8ovjybline"]

[ext_resource type="PackedScene" uid="uid://dc6k5om0by8g8" path="res://BuilderDefender2D/Scenes/mouse_selector.tscn" id="1_efvcm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_wov40"]
[ext_resource type="Script" path="res://BuilderDefender2D/Scripts/building_manager.gd" id="2_fia1h"]
[ext_resource type="PackedScene" uid="uid://bbtvnecebn043" path="res://BuilderDefender2D/Scenes/hud/ui_hud.tscn" id="2_yli80"]
[ext_resource type="Script" path="res://BuilderDefender2D/Scripts/input_manager.gd" id="3_3wyff"]
[ext_resource type="TileSet" uid="uid://d36ttqe8kx1lq" path="res://BuilderDefender2D/Textures/TileSet/tile_set_environment.tres" id="3_bux45"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="6_eyrdq"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_f1v8q"]
[ext_resource type="Script" path="res://BuilderDefender2D/Scripts/camera_manager.gd" id="7_ochf1"]
[ext_resource type="Texture2D" uid="uid://dnienewtdgsyp" path="res://BuilderDefender2D/Textures/WoodHarvester.png" id="9_v2yg1"]

[sub_resource type="Resource" id="Resource_qdw7d"]
script = ExtResource("7_f1v8q")
duration = 1.0
transition = 0
ease = 2

[node name="MainScene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("1_wov40")

[node name="MouseSelector" parent="." instance=ExtResource("1_efvcm")]

[node name="FollowObjectCam" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="FollowObjectCam"]
visible = false
scale = Vector2(0.01, 0.01)
texture = ExtResource("9_v2yg1")

[node name="WorldMap" type="Node2D" parent="."]

[node name="ContainerBuildings" type="Node2D" parent="WorldMap"]

[node name="TileMapLayer" type="TileMapLayer" parent="WorldMap"]
z_index = -1
tile_map_data = PackedByteArray("AADz//f/AAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAABAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAABAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAABAAAAAADz/wYAAAAAAAAAAADz/wcAAAABAAAAAADz/wgAAAABAAAAAADz/wkAAAABAAAAAAD0//f/AAABAAAAAAD0//j/AAABAAAAAAD0//n/AAABAAAAAAD0//r/AAABAAAAAAD0//v/AAABAAAAAAD0//z/AAABAAAAAAD0//3/AAABAAAAAAD0//7/AAAAAAAAAAD0////AAABAAAAAAD0/wAAAAABAAAAAAD0/wEAAAABAAAAAAD0/wIAAAABAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAABAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAABAAAAAAD0/wgAAAABAAAAAAD0/wkAAAABAAAAAAD1//f/AAABAAAAAAD1//j/AAAAAAAAAAD1//n/AAABAAAAAAD1//r/AAAAAAAAAAD1//v/AAABAAAAAAD1//z/AAABAAAAAAD1//3/AAAAAAAAAAD1//7/AAABAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAABAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAABAAAAAAD1/wUAAAABAAAAAAD1/wYAAAABAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD2//f/AAABAAAAAAD2//j/AAAAAAAAAAD2//n/AAABAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAABAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAABAAAAAAD2/wAAAAABAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAABAAAAAAD2/wMAAAABAAAAAAD2/wQAAAABAAAAAAD2/wUAAAABAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAABAAAAAAD2/wgAAAABAAAAAAD2/wkAAAAAAAAAAAD3//f/AAABAAAAAAD3//j/AAABAAAAAAD3//n/AAAAAAAAAAD3//r/AAABAAAAAAD3//v/AAABAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAABAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAABAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAABAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD4//f/AAABAAAAAAD4//j/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAABAAAAAAD4//v/AAAAAAAAAAD4//z/AAABAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAABAAAAAAD4/wcAAAAAAAAAAAD4/wgAAAABAAAAAAD4/wkAAAABAAAAAAD5//f/AAABAAAAAAD5//j/AAABAAAAAAD5//n/AAAAAAAAAAD5//r/AAABAAAAAAD5//v/AAAAAAAAAAD5//z/AAABAAAAAAD5//3/AAABAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAABAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAABAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAABAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAABAAAAAAD5/wkAAAAAAAAAAAD6//f/AAAAAAAAAAD6//j/AAABAAAAAAD6//n/AAAAAAAAAAD6//r/AAABAAAAAAD6//v/AAABAAAAAAD6//z/AAABAAAAAAD6//3/AAABAAAAAAD6//7/AAAAAAAAAAD6////AAABAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAABAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAABAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD7//f/AAAAAAAAAAD7//j/AAAAAAAAAAD7//n/AAABAAAAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAABAAAAAAD7////AAABAAAAAAD7/wAAAAABAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAABAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAABAAAAAAD7/wYAAAABAAAAAAD7/wcAAAABAAAAAAD7/wgAAAABAAAAAAD7/wkAAAABAAAAAAD8//f/AAABAAAAAAD8//j/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAABAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAABAAAAAAD8/wEAAAABAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAABAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAABAAAAAAD8/wgAAAABAAAAAAD8/wkAAAABAAAAAAD9//f/AAABAAAAAAD9//j/AAABAAAAAAD9//n/AAAAAAAAAAD9//r/AAABAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAABAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAABAAAAAAD9/wIAAAABAAAAAAD9/wMAAAABAAAAAAD9/wQAAAABAAAAAAD9/wUAAAABAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAABAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD+//f/AAABAAAAAAD+//j/AAABAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+//v/AAABAAAAAAD+//z/AAABAAAAAAD+//3/AAABAAAAAAD+//7/AAABAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAABAAAAAAD+/wMAAAABAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAABAAAAAAD+/wYAAAABAAAAAAD+/wcAAAABAAAAAAD+/wgAAAABAAAAAAD+/wkAAAABAAAAAAD///f/AAABAAAAAAD///j/AAABAAAAAAD///n/AAAAAAAAAAD///r/AAABAAAAAAD///v/AAABAAAAAAD///z/AAABAAAAAAD///3/AAABAAAAAAD///7/AAAAAAAAAAD/////AAABAAAAAAD//wAAAAABAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAABAAAAAAD//wQAAAAAAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD//wgAAAABAAAAAAD//wkAAAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAABAAAAAAAAAPn/AAABAAAAAAAAAPr/AAABAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAABAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAABAAAAAAAAAP//AAABAAAAAAAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAABAAAAAAABAPn/AAAAAAAAAAABAPr/AAABAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAABAAAAAAABAP//AAAAAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAABAAAAAAABAAYAAAAAAAAAAAABAAcAAAABAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAPf/AAABAAAAAAACAPj/AAABAAAAAAACAPn/AAAAAAAAAAACAPr/AAABAAAAAAACAPv/AAAAAAAAAAACAPz/AAABAAAAAAACAP3/AAABAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAABAAAAAAACAAEAAAAAAAAAAAACAAIAAAABAAAAAAACAAMAAAAAAAAAAAACAAQAAAABAAAAAAACAAUAAAABAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAADAPf/AAABAAAAAAADAPj/AAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAABAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAABAAAAAAADAP7/AAABAAAAAAADAP//AAABAAAAAAADAAAAAAABAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAABAAAAAAADAAQAAAAAAAAAAAADAAUAAAABAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAABAAAAAAADAAkAAAAAAAAAAAAEAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAABAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAABAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAABAAAAAAAEAAgAAAABAAAAAAAEAAkAAAABAAAAAAAFAPf/AAABAAAAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAAFAPz/AAABAAAAAAAFAP3/AAABAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAABAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAABAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAABAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAABAAAAAAAGAPf/AAABAAAAAAAGAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAABAAAAAAAGAP3/AAABAAAAAAAGAP7/AAAAAAAAAAAGAP//AAABAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAABAAAAAAAGAAIAAAABAAAAAAAGAAMAAAABAAAAAAAGAAQAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAABAAAAAAAGAAkAAAABAAAAAAAHAPf/AAABAAAAAAAHAPj/AAABAAAAAAAHAPn/AAABAAAAAAAHAPr/AAABAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAABAAAAAAAHAP//AAABAAAAAAAHAAAAAAABAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAABAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAABAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAABAAAAAAAHAAkAAAAAAAAAAAAIAPf/AAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAABAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAABAAAAAAAIAP7/AAAAAAAAAAAIAP//AAABAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAABAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAABAAAAAAAIAAYAAAABAAAAAAAIAAcAAAABAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAPf/AAABAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAABAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAABAAAAAAAJAP//AAABAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAABAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAABAAAAAAAKAPf/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAABAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAABAAAAAAAKAP//AAABAAAAAAAKAAAAAAABAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAABAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAABAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAABAAAAAAAKAAkAAAABAAAAAAALAPf/AAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAABAAAAAAALAPr/AAABAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAABAAAAAAALAP7/AAABAAAAAAALAP//AAABAAAAAAALAAAAAAAAAAAAAAALAAEAAAABAAAAAAALAAIAAAAAAAAAAAALAAMAAAABAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAABAAAAAAALAAgAAAAAAAAAAAALAAkAAAABAAAAAAAMAPf/AAAAAAAAAAAMAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAMAPr/AAABAAAAAAAMAPv/AAABAAAAAAAMAPz/AAABAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAABAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAABAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAABAAAAAAAMAAQAAAABAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAABAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAA=")
tile_set = ExtResource("3_bux45")

[node name="BuildingManager" type="Node" parent="." node_paths=PackedStringArray("camera", "containerBuilding")]
script = ExtResource("2_fia1h")
camera = NodePath("../Camera2D")
containerBuilding = NodePath("../WorldMap/ContainerBuildings")

[node name="InputManager" type="Node" parent="." node_paths=PackedStringArray("buildingManager", "cameraManager", "mouseSelector")]
script = ExtResource("3_3wyff")
buildingManager = NodePath("../BuildingManager")
cameraManager = NodePath("../CameraManager")
mouseSelector = NodePath("../MouseSelector")

[node name="CameraManager" type="Node" parent="." node_paths=PackedStringArray("camera", "followObject")]
script = ExtResource("7_ochf1")
camera = NodePath("../Camera2D")
followObject = NodePath("../FollowObjectCam")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_yli80")]

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
script = ExtResource("6_eyrdq")
priority = 1
follow_mode = 2
follow_target = NodePath("../FollowObjectCam")
tween_resource = SubResource("Resource_qdw7d")
follow_damping = true
follow_damping_value = Vector2(0.2, 0.2)
dead_zone_height = 0.7
show_viewfinder_in_play = true
draw_limits = true
